feat: add workflow dispatch

--- a/02-quarkus/src/main/resources/application.properties
+++ b/02-quarkus/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-quarkus.application.name=volcanix2
+quarkus.application.name=volcanix
 
 quarkus.otel.exporter.otlp.endpoint=http://lgtm.otel:4317
 quarkus.otel.metrics.enabled=true
